added routes and base pages

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.24"
+    "mongoose": "^5.9.24",
+    "react": "^16.13.1"
   }
 }
